ephy-profile-utils: shut up libsoup runtime warning

It was actually more than a warning. It was preventing epy to recover
passwords previously stored in the keyring, as all of them were stored using
"/" as the path of the URI.

https://bugzilla.gnome.org/show_bug.cgi?id=670431